--- a/index.html
+++ b/index.html
@@ -5,71 +5,69 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
       <meta name="description"
-         content="With the divine grace of the almighty, inviting you and your family to Sriita's wedding to be held on 1st December at Jayjayanti Banquet Hall, Andul Rd, Andul Mauri from 7:00 PM onwards.">
-      <meta name="author" content="Asiit Paul">
+         content="With the divine grace of the almighty, inviting you and your family to Kalis & Asijit's wedding reception to be held on 1st December 2026 at Jayjayanti Banquet Hall, Andul Rd, Andul Mauri from 7:00 PM onwards.">
+      <meta name="author" content="Asijit Paul">
       <meta name="email" content="ap.bubounty@gmail.com">
-      <meta name="copyright" content="Asijit Paul 2021" />
+      <meta name="copyright" content="Asijit Paul 2026" />
       <meta property="og:type" content="website" />
-      <meta property="og:title" content="Wedding Invitation | 1st Dec | Jayjayanti Banquet Hall, Andul Rd, Andul Mauri" />
+      <meta property="og:title" content="Wedding Reception Invitation | 1st Dec 2026 | Jayjayanti Banquet Hall" />
       <meta property="og:description"
-         content="With the divine grace of the almighty, inviting you and your family to elder sister's wedding to be held on 1st December at Jayjayanti Banquet Hall, Andul Rd, Andul Mauri from 7:00 PM onwards." />
+         content="With the divine grace of the almighty, inviting you and your family to Kalis & Asijit's wedding reception on 1st December 2026 at Jayjayanti Banquet Hall, Andul Rd, Andul Mauri from 7:00 PM onwards." />
       <meta property="og:url" content="" />
-      <meta property="og:site_name" content="Wedding Invitation | 1st Dec" />
+      <meta property="og:site_name" content="Wedding Reception | 1st Dec 2026" />
       <meta name="twitter:card" content="website">
-      <meta name="twitter:site" content="Wedding Invitation | 1st Dec">
-      <meta name="twitter:title" content="Wedding Invitation | 1st Dec">
+      <meta name="twitter:site" content="Wedding Reception | 1st Dec 2026">
+      <meta name="twitter:title" content="Wedding Reception | 1st Dec 2026">
       <meta name="twitter:description"
-         content="With the divine grace of the almighty, inviting you and your family to elder sister's wedding to be held on 1st December at Ashirwad Garden, Ratu, Ranchi from 7:00 PM onwards.">
+         content="Inviting you and your family to the wedding reception of Kalis & Asijit on 1st December 2026 at Jayjayanti Banquet Hall, Andul Rd, Andul Mauri from 7:00 PM onwards.">
       <meta name="twitter:creator" content="@paulasijit">
       
-      <title>Wedding Invitation | Dec 1 | Jayjayanti Banquet Hall, Andul Rd, Andul Mauri</title>
+      <title>Wedding Reception | 1 Dec 2026 | Jayjayanti Banquet Hall</title>
 
       <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
-      <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Dancing+Script&amp;display=swap'>
+      <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Dancing+Script&display=swap'>
       <link rel="stylesheet" href="./css/style.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    </head>
    <body>
-      <!-- partial:index.partial.html -->
       <div class="sakura-falling"></div>
       <img src="https://i.imgur.com/dGOOfnA.png" alt="image-top-right" class="top-right-decoration">
       <img src="https://i.imgur.com/t6ffnbn.png" alt="image-top-left" class="top-left-decoration"> 
       <section id="media"></section>
       <div class="wrap">
          <div class="title">
-            <h1>Srijita </h1>
+            <h1>Kalis</h1>
             <h2>&</h2>
-            <h1>Titas</h1>
-            <h3>Are getting married</h3>
+            <h1>Asijit</h1>
+            <h3>Wedding Reception</h3>
             <p>
-               on <span class="date">1 December 2021</span></29>, At <span class="place">Jayjayanti Banquet Hall</span> Andul Rd, Andul Mauri                
+               on <span class="date">1 December 2026</span>, At <span class="place">Jayjayanti Banquet Hall</span> Andul Rd, Andul Mauri
             </p>
          </div>
       </div>
       <div id="time"></div>
       <p class="dance-med">
-         dinner & dancing to follow
+         dinner & celebration to follow
       </p>
       <div class="actions">
         <a href="https://goo.gl/maps/UXrLScY7KwwZTQHc8" target="_blank">
           <div class="venue">SEE THE VENUE</div>
         </a>
-        <a href="#" download="Invitation | 1st Dec | Hope to see you there!">
+        <a href="#" download="Wedding Reception Invitation | 1st Dec 2026">
           <div class="venue">DOWNLOAD INVITATION CARD</div>
         </a>
       </div>
       <p class="footer">
-         Can't wait to celebrate auspicious moment of our family with you! <br>
+         Can't wait to celebrate this special day with you! <br>
          Just a ping away for any queries: +91 8583035127
-         <span></span>
       </p>
       <div class="music">
         <audio src="./assets/mp3/song2.mp3" id="my_audio" loop="loop" autostart="true"></audio> 
       </div>
       <p class="happiness">Join us in our happiness!<br><a href="https://twitter.com/asijit_paul" target="_blank" class="twitter"><i class="fa fa-twitter"></i></a></p>
-      <!-- partial -->
+
       <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
       <script src='https://cdn.jsdelivr.net/gh/timoschaefer/jQuery-Sakura/jquery-sakura.min.js'></script>
-      <script  src="./js/script.js"></script>
+      <script src="./js/script.js"></script>
    </body>
 </html>
