Update names in wedding reception invitationhmmm

--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
       <meta name="description"
-         content="With the divine grace of the almighty, inviting you and your family to Kalis & Asijit's wedding reception to be held on 1st December 2026 at Jayjayanti Banquet Hall, Andul Rd, Andul Mauri from 7:00 PM onwards.">
+         content="With the divine grace of the almighty, inviting you and your family to Kakali's & Asijit's wedding reception to be held on 1st December 2026 at Jayjayanti Banquet Hall, Andul Rd, Andul Mauri from 7:00 PM onwards.">
       <meta name="author" content="Asijit Paul">
       <meta name="email" content="ap.bubounty@gmail.com">
       <meta name="copyright" content="Asijit Paul 2026" />
       <meta property="og:type" content="website" />
       <meta property="og:title" content="Wedding Reception Invitation | 1st Dec 2026 | Jayjayanti Banquet Hall" />
       <meta property="og:description"
-         content="With the divine grace of the almighty, inviting you and your family to Kalis & Asijit's wedding reception on 1st December 2026 at Jayjayanti Banquet Hall, Andul Rd, Andul Mauri from 7:00 PM onwards." />
+         content="With the divine grace of the almighty, inviting you and your family to Kakali's & Asijit's wedding reception on 1st December 2026 at Jayjayanti Banquet Hall, Andul Rd, Andul Mauri from 7:00 PM onwards." />
       <meta property="og:url" content="" />
       <meta property="og:site_name" content="Wedding Reception | 1st Dec 2026" />
       <meta name="twitter:card" content="website">
       <meta name="twitter:site" content="Wedding Reception | 1st Dec 2026">
       <meta name="twitter:title" content="Wedding Reception | 1st Dec 2026">
       <meta name="twitter:description"
-         content="Inviting you and your family to the wedding reception of Kalis & Asijit on 1st December 2026 at Jayjayanti Banquet Hall, Andul Rd, Andul Mauri from 7:00 PM onwards.">
+         content="Inviting you and your family to the wedding reception of Kakali's & Asijit on 1st December 2026 at Jayjayanti Banquet Hall, Andul Rd, Andul Mauri from 7:00 PM onwards.">
       <meta name="twitter:creator" content="@paulasijit">
       
       <title>Wedding Reception | 1 Dec 2026 | Jayjayanti Banquet Hall</title>
@@ -36,7 +36,7 @@
       <section id="media"></section>
       <div class="wrap">
          <div class="title">
-            <h1>Kalis</h1>
+            <h1>Kakali's</h1>
             <h2>&</h2>
             <h1>Asijit</h1>
             <h3>Wedding Reception</h3>
